--- a/src/app/00078-GestionPlanillas/WebApp/Assets/application/css/login.css
+++ b/src/app/00078-GestionPlanillas/WebApp/Assets/application/css/login.css
@@ -8,8 +8,8 @@ body {
   font-family: "Poppins", sans-serif;
   min-height: 100%;
   background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #9f7d7d, #1b1b1e); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #9f7d7d, #1b1b1e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .login-container {
@@ -17,11 +17,11 @@ body {
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 7rem;
+  grid-gap: 1rem;
   padding: 0 2rem;
   background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #434343, #000000); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #9f7d7d, #1b1b1e); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #9f7d7d, #1b1b1e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .login-content {
