--- a/src/app/00078-GestionPlanillas/WebApp/Views/Home/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Home/Index.cshtml
@@ -1,31 +1,50 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model GridMvc.Pagination.GridPager
+@if (Model == null || Model.PageCount <= 1)
+{
+    return;
 }
+<div class="grid-pager pull-right">
+    <ul class="pagination">
+        @if (Model.CurrentPage > 1)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Model.GetLinkForPage(Model.CurrentPage - 1)">«</a>
+            </li>
+        }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        @if (Model.StartDisplayedPage > 1)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Model.GetLinkForPage(1)">1</a>
+            </li>
+            if (Model.StartDisplayedPage > 2)
+            {
+                <li class="page-item"><a class="page-link" href="@Model.GetLinkForPage(Model.StartDisplayedPage - 1)">...</a></li>
+            }
+        }
+        @for (int i = Model.StartDisplayedPage; i <= Model.EndDisplayedPage; i++)
+        {
+            if (i == Model.CurrentPage)
+            {
+                <li class="page-item active"><a class="page-link">@i</a></li>
+            }
+            else
+            {
+                <li class="page-item"><a class="page-link" href="@Model.GetLinkForPage(i)">@i</a></li>
+            }
+        }
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+        @if (Model.EndDisplayedPage < Model.PageCount)
+        {
+            if (Model.EndDisplayedPage < Model.PageCount - 1)
+            {
+                <li class="page-item"><a class="page-link" href="@Model.GetLinkForPage(Model.EndDisplayedPage + 1)">...</a></li>
+            }
+            <li class="page-item"><a class="page-link" href="@Model.GetLinkForPage(Model.PageCount)">@Model.PageCount</a></li>
+        }
+        @if (Model.CurrentPage < Model.PageCount)
+        {
+            <li class="page-item"><a class="page-link" href="@Model.GetLinkForPage(Model.CurrentPage + 1)">»</a></li>
+        }
+    </ul>
 </div>
