Avance interfaces generación de planillas.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApp.Models.TrabajadorModel>
+﻿@model IEnumerable<WebApp.Models.ResumenPlanillaTrabajadorModel>
 @using GridMvc.Html
 
 <div class="container-fluid">
@@ -29,13 +29,18 @@
         <div class="table-responsive" style="min-height:300px">
             @Html.Grid(Model).Columns(columns =>
             {
+                columns.Add(c => c.T_CategoriaPlanillaDesc).Titled("Planilla").Css("text-left").Filterable(true);
+                columns.Add(c => c.I_Anio).Titled("Año").Css("text-left").Filterable(true);
+                columns.Add(c => c.T_MesDesc).Titled("Mes").Css("text-left").Filterable(true);
                 columns.Add(c => c.T_TipoDocumentoDesc).Titled("Tip.Doc.").Css("text-left").Filterable(true);
                 columns.Add(c => c.C_NumDocumento).Titled("Num.Doc.").Css("text-center").Filterable(true);
                 columns.Add(c => c.T_ApellidosNombre).Titled("Apellidos y Nombres").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_FechaIngreso).Titled("Fech.Ingreso").Css("text-center").Filterable(true);
                 columns.Add(c => c.T_RegimenDesc).Titled("Régimen").Css("text-center").Filterable(true);
-                columns.Add(c => c.T_VinculoDesc).Titled("Vínculo").Css("text-left").Filterable(true);
-                columns.Add(c => c.T_EstadoDesc).Titled("Estado").Css("text-center").Filterable(true);
+                columns.Add(c => c.T_TotalRemuneracion).Titled("Rem.").Css("text-center");
+                columns.Add(c => c.T_TotalDescuento).Titled("Desc.").Css("text-center");
+                columns.Add(c => c.T_TotalReintegro).Titled("Reint.").Css("text-center");
+                columns.Add(c => c.T_TotalDeduccion).Titled("Deducc.").Css("text-center");
+                columns.Add(c => c.T_TotalSueldo).Titled("Total.").Css("text-center");
             }).WithPaging(12).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
         </div>
 
