--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -7,7 +7,7 @@
                 <i class="fa fa-fw fa-search"></i> Consultas<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="inquiries" class="collapse">
-                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa bi-person-lines-fill"></i> Consulta estudiantes</a></li>
+                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa bi-person-lines-fill"></i> Consulta trabajadores</a></li>
             </ul>
         </li>
         <li class="nav-item">
