Avance interfaz consulta de trabajadores

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -9,6 +9,9 @@
             <ul id="inquiries" class="collapse">
                 <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa bi-person-lines-fill"></i> Consulta trabajadores</a></li>
             </ul>
+            <ul id="inquiries" class="collapse">
+                <li><a href="@Url.Action("Index", "Planillas")"><i class="fa fa-file"></i> Consulta Planillas</a></li>
+            </ul>
         </li>
         <li class="nav-item">
             <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#help">
