--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -36,7 +36,8 @@
                 columns.Add(c => c.T_RegimenDesc).Titled("Régimen").Css("text-center").Filterable(true);
                 columns.Add(c => c.T_VinculoDesc).Titled("Vínculo").Css("text-left").Filterable(true);
                 columns.Add(c => c.T_EstadoDesc).Titled("Estado").Css("text-center").Filterable(true);
-            }).WithPaging(12).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
+                columns.Add().SetWidth(250).Encoded(false).Sanitized(false).RenderValueAs(model => @<a href="@Url.Action("Editar", "Trabajadores", new { id = model.I_TrabajadorID })" class="modal-link-lg"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>);
+}).WithPaging(12).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
         </div>
 
     </div>
