--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_DetalleTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_DetalleTrabajador.cshtml
@@ -12,15 +12,31 @@
         <div class="col-2">
             <div class="form-group">
                 @Html.LabelFor(model => model.C_TrabajadorCod, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.C_TrabajadorCod, new { @class = "form-control" })
-                <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_TrabajadorCod)</p>
+                @Html.TextBoxFor(model => model.C_TrabajadorCod, new { @class = "form-control", @readonly = "@readonly" })
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-5">
             <div class="form-group">
                 @Html.LabelFor(model => model.T_ApellidosNombre, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_ApellidosNombre, new { @class = "form-control" })
-                <p class="text-danger small">@Html.ValidationMessageFor(model => model.T_ApellidosNombre)</p>
+                @Html.TextBoxFor(model => model.T_ApellidosNombre, new { @class = "form-control", @readonly = "@readonly" })
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="form-group">
+                <label class="control-label" for="">Clase</label>
+                <input type="text" class="form-control" value="AP" readonly />
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="form-group">
+                <label class="control-label" for="">Categoría</label>
+                <input type="text" class="form-control" value="STC" readonly />
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group">
+                <label class="control-label" for="">Carnet Essalud</label>
+                <input type="text" class="form-control" value="7606021NRPAW000" readonly />
             </div>
         </div>
     </div>
@@ -29,22 +45,51 @@
         <div class="col-3">
             <div class="form-group">
                 @Html.LabelFor(model => model.T_TipoDocumentoDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_TipoDocumentoDesc, new { @class = "form-control" })
-                <p class="text-danger small">@Html.ValidationMessageFor(model => model.T_TipoDocumentoDesc)</p>
+                @Html.TextBoxFor(model => model.T_TipoDocumentoDesc, new { @class = "form-control", @readonly = "@readonly" })
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <div class="form-group">
-                @Html.LabelFor(model => model.C_NumDocumento, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control" })
-                <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_NumDocumento)</p>
+                <label class="control-label" for="">&nbsp;</label>
+                @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control", @readonly = "@readonly" })
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="form-group">
+                <label class="control-label" for="">Cta. de Banco</label>
+                <input type="text" class="form-control" value="BCP" readonly />
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="form-group">
+                <label class="control-label" for="">&nbsp;</label>
+                <input type="text" class="form-control" value="4071900555" readonly />
             </div>
         </div>
         <div class="col-3">
             <div class="form-group">
                 @Html.LabelFor(model => model.T_EstadoDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_EstadoDesc, new { @class = "form-control" })
-                <p class="text-danger small">@Html.ValidationMessageFor(model => model.T_EstadoDesc)</p>
+                @Html.TextBoxFor(model => model.T_EstadoDesc, new { @class = "form-control", @readonly = "@readonly" })
+            </div>
+        </div>
+    </div>
+    
+    <div class="form-row">
+        <div class="col-12">
+            <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Local</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" value="L46 PASAJE FEDERICO VILLARREAL N° 285 - SAN MIGUEL" readonly />
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12">
+            <div class="mb-3 row">
+                <label for="staticEmail" class="col-sm-2 col-form-label">Dependencia</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" value="010800 CENTRO UNIVERSITARIO DE CÓMPUTO E INFORMÁTICA" readonly />
+                </div>
             </div>
         </div>
     </div>
@@ -53,8 +98,26 @@
         <div class="col-2">
             <div class="form-group">
                 @Html.LabelFor(model => model.T_RegimenDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_RegimenDesc, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.T_RegimenDesc, new { @class = "form-control", @readonly = "@readonly" })
                 <p class="text-danger small">@Html.ValidationMessageFor(model => model.T_RegimenDesc)</p>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group">
+                <label class="control-label" for="">AFPS</label>
+                <input type="text" class="form-control" value="PROFUTURO" readonly />
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="form-group">
+                <label class="control-label" for="">N° CUSPP</label>
+                <input type="text" class="form-control" value="579111WNPRA6" readonly />
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="form-group">
+                <label class="control-label" for="">CARGO</label>
+                <input type="text" class="form-control" value="" readonly />
             </div>
         </div>
     </div>
