--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -18,9 +18,9 @@
     <br />
 
     <div class="col-12">
-        @*<a href="@Url.Action("Create", "Concepto", new { tipoPago = ViewBag.TipoPago })" class="btn btn-primary pull-right modal-link">
-            <i class="fa bi-ui-checks-grid"></i> Agregar concepto
-        </a>*@
+        <a href="@Url.Action("Nuevo", "Trabajadores")" class="btn btn-primary pull-right modal-link-lg">
+            <i class="fa bi-ui-checks-grid"></i> Nuevo trabajador
+        </a>
 
         <p class="h3"><small>@ViewBag.Title</small></p>
         <br />
