--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
@@ -63,7 +63,7 @@
             <div class="col-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_TipoDocumentoID, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => model.I_TipoDocumentoID, new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control form-control-sm text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
