Avance registro nuevo trabajador

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MsgRegistrarTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MsgRegistrarTrabajador.cshtml
@@ -12,6 +12,11 @@
 </div>
 
 <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal">
-    <i class="fa fa-times-circle-o"></i> Cancelar
+    <i class="fa fa-times-circle-o"></i> Cerrar
 </button>
 
+<script>
+    $(".modal").on('hide.bs.modal', function () {
+        location.reload();
+    })
+</script>
