--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
@@ -63,7 +63,7 @@
             <div class="col-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_TipoDocumentoID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control form-control-sm text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
@@ -74,20 +74,20 @@
             </div>
             <div class="col-2">
                 <div class="form-group">
-                    <label class="control-label" for="">Cta. de Banco</label>
-                    <input type="text" class="form-control" value="BCP" readonly />
+                    @Html.LabelFor(model => model.I_BancoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
                 <div class="form-group">
-                    <label class="control-label" for="">&nbsp;</label>
-                    <input type="text" class="form-control" value="4071900555" readonly />
+                    @Html.LabelFor(model => model.T_NroCuentaBancaria, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_NroCuentaBancaria, new { @class = "form-control" })
                 </div>
             </div>
             <div class="col-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_EstadoID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_EstadoID, ViewBag.ListaEstados as SelectList, null, new { @class = "form-control form-control-sm text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_EstadoID, ViewBag.ListaEstados as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
         </div>
@@ -95,18 +95,9 @@
         <div class="form-row">
             <div class="col-12">
                 <div class="mb-3 row">
-                    <label for="staticEmail" class="col-sm-2 col-form-label">Local</label>
+                    @Html.LabelFor(model => model.I_DependenciaID, new { @class = "col-sm-2 col-form-label" })
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" value="L46 PASAJE FEDERICO VILLARREAL N° 285 - SAN MIGUEL" readonly />
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12">
-                <div class="mb-3 row">
-                    <label for="staticEmail" class="col-sm-2 col-form-label">Dependencia</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" value="010800 CENTRO UNIVERSITARIO DE CÓMPUTO E INFORMÁTICA" readonly />
+                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, null, new { @class = "form-control text-uppercase" })
                     </div>
                 </div>
             </div>
@@ -116,13 +107,13 @@
             <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_VinculoID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_VinculoID, ViewBag.ListaVinculos as SelectList, null, new { @class = "form-control form-control-sm text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_VinculoID, ViewBag.ListaVinculos as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_RegimenID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_RegimenID, ViewBag.ListaRegimenes as SelectList, null, new { @class = "form-control form-control-sm text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_RegimenID, ViewBag.ListaRegimenes as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-3">
@@ -160,6 +151,6 @@
     </div>
 
     <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal">
-        <i class="fa fa-times-circle-o"></i> Cancelar
+        <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
