--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
@@ -7,124 +7,152 @@
 </div>
 
 <div class="modal-body">
-    <div class="form-row">
-        <div class="col-2">
-            <div class="form-group">
-                @Html.LabelFor(model => model.C_TrabajadorCod, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.C_TrabajadorCod, new { @class = "form-control", @readonly = "@readonly" })
+    @using (Ajax.BeginForm("Registrar", "Trabajadores", new { area = "" }, new AjaxOptions
+    {
+        HttpMethod = "POST",
+        InsertionMode = InsertionMode.Replace,
+        UpdateTargetId = "div_msg",
+        OnBegin = "Load",
+        OnComplete = "Stop"
+    }))
+    {
+        <div class="form-row">
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.C_TrabajadorCod, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.C_TrabajadorCod, new { @class = "form-control" })
+                </div>
             </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.T_ApellidosNombre, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_ApellidosNombre, new { @class = "form-control", @readonly = "@readonly" })
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.T_ApellidoPaterno, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_ApellidoPaterno, new { @class = "form-control" })
+                </div>
             </div>
-        </div>
-        <div class="col-1">
-            <div class="form-group">
-                <label class="control-label" for="">Clase</label>
-                <input type="text" class="form-control" value="AP" readonly />
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.T_ApellidoMaterno, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_ApellidoMaterno, new { @class = "form-control" })
+                </div>
             </div>
-        </div>
-        <div class="col-1">
-            <div class="form-group">
-                <label class="control-label" for="">Categoría</label>
-                <input type="text" class="form-control" value="STC" readonly />
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.T_Nombre, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_Nombre, new { @class = "form-control" })
+                </div>
             </div>
-        </div>
-        <div class="col-2">
-            <div class="form-group">
-                <label class="control-label" for="">Carnet Essalud</label>
-                <input type="text" class="form-control" value="7606021NRPAW000" readonly />
+            <div class="col-1">
+                <div class="form-group">
+                    <label class="control-label" for="">Clase</label>
+                    <input type="text" class="form-control" value="AP" readonly />
+                </div>
             </div>
-        </div>
-    </div>
-
-    <div class="form-row">
-        <div class="col-3">
-            <div class="form-group">
-                @Html.LabelFor(model => model.T_TipoDocumentoDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_TipoDocumentoDesc, new { @class = "form-control", @readonly = "@readonly" })
+            <div class="col-1">
+                <div class="form-group">
+                    <label class="control-label" for="">Categoría</label>
+                    <input type="text" class="form-control" value="STC" readonly />
+                </div>
             </div>
-        </div>
-        <div class="col-2">
-            <div class="form-group">
-                <label class="control-label" for="">&nbsp;</label>
-                @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control", @readonly = "@readonly" })
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="form-group">
-                <label class="control-label" for="">Cta. de Banco</label>
-                <input type="text" class="form-control" value="BCP" readonly />
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="form-group">
-                <label class="control-label" for="">&nbsp;</label>
-                <input type="text" class="form-control" value="4071900555" readonly />
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="form-group">
-                @Html.LabelFor(model => model.T_EstadoDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_EstadoDesc, new { @class = "form-control", @readonly = "@readonly" })
-            </div>
-        </div>
-    </div>
-    
-    <div class="form-row">
-        <div class="col-12">
-            <div class="mb-3 row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Local</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" value="L46 PASAJE FEDERICO VILLARREAL N° 285 - SAN MIGUEL" readonly />
+            <div class="col-2">
+                <div class="form-group">
+                    <label class="control-label" for="">Carnet Essalud</label>
+                    <input type="text" class="form-control" value="7606021NRPAW000" readonly />
                 </div>
             </div>
         </div>
 
-        <div class="col-12">
-            <div class="mb-3 row">
-                <label for="staticEmail" class="col-sm-2 col-form-label">Dependencia</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" value="010800 CENTRO UNIVERSITARIO DE CÓMPUTO E INFORMÁTICA" readonly />
+        <div class="form-row">
+            <div class="col-3">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_TipoDocumentoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    <label class="control-label" for="">&nbsp;</label>
+                    @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_BancoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.T_NroCuentaBancaria, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_NroCuentaBancaria, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_EstadoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_EstadoID, ViewBag.ListaEstados as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="form-row">
-        <div class="col-2">
-            <div class="form-group">
-                @Html.LabelFor(model => model.T_RegimenDesc, new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.T_RegimenDesc, new { @class = "form-control", @readonly = "@readonly" })
+        <div class="form-row">
+            <div class="col-12">
+                <div class="mb-3 row">
+                    @Html.LabelFor(model => model.I_DependenciaID, new { @class = "col-sm-2 col-form-label" })
+                    <div class="col-sm-10">
+                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, null, new { @class = "form-control text-uppercase" })
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-3">
-            <div class="form-group">
-                <label class="control-label" for="">AFPS</label>
-                <input type="text" class="form-control" value="PROFUTURO" readonly />
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="form-group">
-                <label class="control-label" for="">N° CUSPP</label>
-                <input type="text" class="form-control" value="579111WNPRA6" readonly />
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="form-group">
-                <label class="control-label" for="">CARGO</label>
-                <input type="text" class="form-control" value="" readonly />
-            </div>
-        </div>
-    </div>
 
-    <div class="row d-flex justify-content-center">
-        <button type="submit" class="btn btn-primary center" id="btnsubmit"><i class="fa fa-save"></i> Guardar</button>
-    </div>
+        <div class="form-row">
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_VinculoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_VinculoID, ViewBag.ListaVinculos as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_RegimenID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_RegimenID, ViewBag.ListaRegimenes as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.I_AfpID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.I_AfpID, ViewBag.ListaAfps as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.T_Cuspp, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.T_Cuspp, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group">
+                    <label class="control-label" for="">CARGO</label>
+                    <input type="text" class="form-control" value="" readonly />
+                </div>
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary center" id="btnsubmit"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+    }
 </div>
 
 <div class="modal-footer" id="div_msg">
-    <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal"><i class="fa fa-times-circle-o"> </i>Cancelar</button>
+    <div class="col-md-12" style="display:none" id="loading">
+        <h6>Espere un momento...</h6>
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
+    </div>
+
+    <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal">
+        <i class="fa fa-times-circle-o"></i> Cerrar
+    </button>
 </div>
