--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
@@ -7,7 +7,7 @@
 </div>
 
 <div class="modal-body">
-    @using (Ajax.BeginForm("Registrar", "Trabajadores", new { area = "" }, new AjaxOptions
+    @using (Ajax.BeginForm("Actualizar", "Trabajadores", new { area = "" }, new AjaxOptions
     {
         HttpMethod = "POST",
         InsertionMode = InsertionMode.Replace,
@@ -16,6 +16,8 @@
         OnComplete = "Stop"
     }))
     {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.I_TrabajadorID)
         <div class="form-row">
             <div class="col-2">
                 <div class="form-group">
@@ -62,7 +64,7 @@
         </div>
 
         <div class="form-row">
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_TipoDocumentoID, new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control text-uppercase" })
@@ -74,10 +76,10 @@
                     @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control" })
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_BancoID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, null, new { @class = "form-control text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
@@ -99,13 +101,23 @@
                 <div class="mb-3 row">
                     @Html.LabelFor(model => model.I_DependenciaID, new { @class = "col-sm-2 col-form-label" })
                     <div class="col-sm-10">
-                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, null, new { @class = "form-control text-uppercase" })
+                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="form-row">
+            <div class="col-2">
+                <div class="input-group date">
+                    @Html.LabelFor(model => model.D_FechaIngreso, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.D_FechaIngreso, new { @class = "form-control required" })
+                    <div class="input-group-append">
+                        <span class="input-group-text"><i class="fa fa-calendar-o"></i></span>
+                    </div>
+                </div>
+                <p>@Html.ValidationMessageFor(m => m.D_FechaIngreso)</p>
+            </div>
             <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_VinculoID, new { @class = "control-label" })
@@ -118,13 +130,13 @@
                     @Html.DropDownListFor(model => model.I_RegimenID, ViewBag.ListaRegimenes as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_AfpID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_AfpID, ViewBag.ListaAfps as SelectList, null, new { @class = "form-control text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_AfpID, ViewBag.ListaAfps as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase" })
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.T_Cuspp, new { @class = "control-label" })
                     @Html.TextBoxFor(model => model.T_Cuspp, new { @class = "form-control" })
@@ -156,3 +168,27 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('.select-filter-modal').select2({
+            theme: 'bootstrap4',
+            dropdownParent: $('#modal-container-lg'),
+            placeholder: "[ SELECCIONAR ]"
+        }).on('hide', function (e) {
+            e.stopPropagation();
+        });
+
+        $('.input-group.date').datepicker({
+            todayBtn: 'linked',
+            language: 'es',
+            format: 'dd/mm/yyyy',
+            dateFormat: 'dd/mm/yyyy',
+            autoclose: true,
+            weekStart: 0,
+            orientation: 'auto'
+        }).on('hide', function (e) {
+            e.stopPropagation();
+        });
+    });
+</script>
