--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_NuevoTrabajador.cshtml
@@ -7,13 +7,16 @@
 </div>
 
 <div class="modal-body">
-    @using (Ajax.BeginForm("Registrar", "Trabajadores", new { area = "" }, new AjaxOptions { 
-        HttpMethod = "POST", 
-        InsertionMode = InsertionMode.Replace, 
-        UpdateTargetId = "div_msg", 
-        OnBegin = "Load", 
-        OnComplete = "Stop" }))
+    @using (Ajax.BeginForm("Registrar", "Trabajadores", new { area = "" }, new AjaxOptions
     {
+        HttpMethod = "POST",
+        InsertionMode = InsertionMode.Replace,
+        UpdateTargetId = "div_msg",
+        OnBegin = "Load",
+        OnComplete = "Stop"
+    }))
+    {
+        @Html.AntiForgeryToken()
         <div class="form-row">
             <div class="col-2">
                 <div class="form-group">
@@ -60,7 +63,7 @@
         </div>
 
         <div class="form-row">
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_TipoDocumentoID, new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.I_TipoDocumentoID, ViewBag.ListaTipoDocumentos as SelectList, null, new { @class = "form-control text-uppercase" })
@@ -72,10 +75,10 @@
                     @Html.TextBoxFor(model => model.C_NumDocumento, new { @class = "form-control" })
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_BancoID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, null, new { @class = "form-control text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_BancoID, ViewBag.ListaBancos as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase" })
                 </div>
             </div>
             <div class="col-2">
@@ -97,13 +100,22 @@
                 <div class="mb-3 row">
                     @Html.LabelFor(model => model.I_DependenciaID, new { @class = "col-sm-2 col-form-label" })
                     <div class="col-sm-10">
-                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, null, new { @class = "form-control text-uppercase" })
+                        @Html.DropDownListFor(model => model.I_DependenciaID, ViewBag.ListaDependencias as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="form-row">
+            <div class="col-2">
+                <div class="input-group date">
+                    @Html.LabelFor(model => model.D_FechaIngreso, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.D_FechaIngreso, "{0:dd/MM/yyyy}", new { @class = "form-control required" })
+                    <div class="input-group-append">
+                        <span class="input-group-text"><i class="fa fa-calendar-o"></i></span>
+                    </div>
+                </div>
+            </div>
             <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_VinculoID, new { @class = "control-label" })
@@ -116,13 +128,13 @@
                     @Html.DropDownListFor(model => model.I_RegimenID, ViewBag.ListaRegimenes as SelectList, null, new { @class = "form-control text-uppercase" })
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.I_AfpID, new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.I_AfpID, ViewBag.ListaAfps as SelectList, null, new { @class = "form-control text-uppercase" })
+                    @Html.DropDownListFor(model => model.I_AfpID, ViewBag.ListaAfps as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase" })
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.T_Cuspp, new { @class = "control-label" })
                     @Html.TextBoxFor(model => model.T_Cuspp, new { @class = "form-control" })
@@ -154,3 +166,27 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('.select-filter-modal').select2({
+            theme: 'bootstrap4',
+            dropdownParent: $('#modal-container-lg'),
+            placeholder: "[ SELECCIONAR ]"
+        }).on('hide', function (e) {
+            e.stopPropagation();
+        });
+
+        $('.input-group.date').datepicker({
+            todayBtn: 'linked',
+            language: 'es',
+            format: 'dd/mm/yyyy',
+            autoclose: true,
+            weekStart: 0,
+            orientation: 'auto',
+            calendarWeeks: true,
+        }).on('hide', function (e) {
+            e.stopPropagation();
+        });
+    });
+</script>
