Avance generación de obligaciones.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
@@ -2,7 +2,7 @@
 @using GridMvc.Html
 
 <div class="container-fluid">
-    <div class="col-12">
+    <div class="col-12 mb-4">
         <section class="content-header">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
@@ -14,8 +14,6 @@
             <h1 class="">@ViewBag.Title <small></small></h1>
         </section>
     </div>
-
-    <br />
 
     <div class="col-12">
         @*<a href="@Url.Action("Create", "Concepto", new { tipoPago = ViewBag.TipoPago })" class="btn btn-primary pull-right modal-link">
