--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -15,6 +15,14 @@
         </li>
         <li class="nav-item">
             <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#help">
+                <i class="fa fa-fw fa-refresh"></i> Operaciones<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
+            </a>
+            <ul id="help" class="collapse">
+                <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-fw bi-person-lines-fill"></i> Generar obligaciones</a></li>
+            </ul>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#help">
                 <i class="fa fa-fw fa-life-ring"></i> Ayuda<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="help" class="collapse">
@@ -34,6 +42,11 @@
         <li class="nav-item">
             <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Consultas" data-target="#inquiries">
                 <i class="fa fa-3x fa-search"></i><br />Consultas
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Operaciones" data-target="#operations">
+                <i class="fa fa-3x fa-refresh"></i><br />Operaciones
             </a>
         </li>
         <li class="nav-item">
